// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1 Ellipsis 1`] = `
Array [
  "[",
  "first",
  "prev",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "end",
  "12",
  "next",
  "last",
  "]",
]
`;

exports[`1 Ellipsis 2`] = `
Array [
  "[",
  "first",
  "prev",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "end",
  "12",
  "next",
  "last",
  "]",
]
`;

exports[`1 Ellipsis 3`] = `
Array [
  "[",
  "first",
  "prev",
  "1",
  "start",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "next",
  "last",
  "]",
]
`;

exports[`1 Ellipsis 4`] = `
Array [
  "[",
  "first",
  "prev",
  "1",
  "start",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "next",
  "last",
  "]",
]
`;

exports[`2 Ellipsis 1`] = `
Array [
  "[",
  "first",
  "prev",
  "1",
  "start",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "end",
  "13",
  "next",
  "last",
  "]",
]
`;

exports[`All Default 1`] = `
Array [
  "1",
  "start",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "end",
  "13",
]
`;

exports[`All Default 2`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "10",
]
`;

exports[`Default Ellipsis Size 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "end",
  "12",
]
`;

exports[`Default Ellipsis Size 2`] = `
Array [
  "1",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "11",
]
`;

exports[`Ellipsis Size 1`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
]
`;

exports[`Ellipsis Size 2`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "end",
  "12",
]
`;

exports[`Ellipsis Size 3`] = `
Array [
  "1",
  "start",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
]
`;

exports[`Hide Ellipsis 1`] = `
Array [
  "[",
  "first",
  "prev",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "next",
  "last",
  "]",
]
`;

exports[`Hide Ellipsis 2`] = `
Array [
  "[",
  "first",
  "prev",
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
  "11",
  "12",
  "13",
  "next",
  "last",
  "]",
]
`;

exports[`Middle Item Range 1`] = `
Array [
  "1",
  "start",
  "4",
  "5",
  "6",
  "7",
  "8",
  "end",
  "11",
]
`;

exports[`Middle Item Range 2`] = `
Array [
  "1",
  "2",
  "3",
  "4",
  "5",
  "6",
  "7",
  "end",
  "10",
]
`;

exports[`Middle Item Range 3`] = `
Array [
  "1",
  "start",
  "4",
  "5",
  "6",
  "7",
  "8",
  "9",
  "10",
]
`;
